using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isAttacking = "isAttacking";
    internal static string isGrounded = "isGrounded";
    internal static string isJumping = "isJumping";
    internal static string isFalling = "isFalling";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isWaking = "isWaking";
    internal static string isSleeping = "isSleeping";
}
